Add showcase where you can retrive access token and use it on client side

--- a/src/main/webapp/OAuth2ClientSample.html
+++ b/src/main/webapp/OAuth2ClientSample.html
@@ -7,6 +7,8 @@
     <title>OAuth2Client Sample</title>
 
     <script type="text/javascript" src="sample/sample.nocache.js"></script>
+
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 </head>
 
 <body>
