--- a/src/main/webapp/OAuth2ClientSample.html
+++ b/src/main/webapp/OAuth2ClientSample.html
@@ -8,7 +8,7 @@
 
     <script type="text/javascript" src="sample/sample.nocache.js"></script>
 
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
